@@ -6,49 +6,72 @@ class TagList < Array
     add(*args)
   end
   
-  def add(*args)
-    options = args.last.is_a?(Hash) ? args.pop : {}
-    options.assert_valid_keys :parse
-    names = args
-    
-    if options[:parse]
-      names = names.map { |n| self.class.parse(n) }.flatten
-    end
-    
-    # Strip whitespace and remove blank or duplicate tags
-    names.reject!(&:blank?)
-    names.map!(&:strip)
-    
+  # Add tags to the tag_list. Duplicate or blank tags will be ignored.
+  #
+  #   tag_list.add("Fun", "Happy")
+  # 
+  # Use the <tt>:parse</tt> option to add an unparsed tag string.
+  #
+  #   tag_list.add("Fun, Happy", :parse => true)
+  def add(*names)
+    extract_and_apply_options!(names)
     concat(names)
-    uniq!
+    clean!
     self
   end
   
+  # Remove specific tags from the tag_list.
+  # 
+  #   tag_list.remove("Sad", "Lonely")
+  #
+  # Like #add, the <tt>:parse</tt> option can be used to remove multiple tags in a string.
+  # 
+  #   tag_list.remove("Sad, Lonely", :parse => true)
   def remove(*names)
+    extract_and_apply_options!(names)
     delete_if { |name| names.include?(name) }
     self
   end
   
   def to_s
+    clean!
+    
     map do |name|
       name.include?(delimiter) ? "\"#{name}\"" : name
     end.join(delimiter.ends_with?(" ") ? delimiter : "#{delimiter} ")
   end
   
-  class << self
-    def from(string)
-      new(*parse(string))
-    end
+ private
+  # Remove whitespace from around tags, duplicate tags, and blank tags.
+  def clean!
+    reject!(&:blank?)
+    map!(&:strip)
+    uniq!
+  end
+  
+  def extract_and_apply_options!(args)
+    options = args.last.is_a?(Hash) ? args.pop : {}
+    options.assert_valid_keys :parse
     
-    def parse(string)
-      returning [] do |names|
+    if options[:parse]
+      args.map! { |a| self.class.from(a) }.flatten!
+    end
+  end
+  
+  class << self
+    # Returns a new TagList using the given tag string.
+    # 
+    #   tag_list = TagList.from("One , Two,  Three")
+    #   tag_list # ["One", "Two", "Three"]
+    def from(string)
+      returning new do |tag_list|
         string = string.to_s.dup
         
         # Parse the quoted tags
-        string.gsub!(/"(.*?)"\s*#{delimiter}?\s*/) { names << $1; "" }
-        string.gsub!(/'(.*?)'\s*#{delimiter}?\s*/) { names << $1; "" }
+        string.gsub!(/"(.*?)"\s*#{delimiter}?\s*/) { tag_list << $1; "" }
+        string.gsub!(/'(.*?)'\s*#{delimiter}?\s*/) { tag_list << $1; "" }
         
-        names.concat(string.split(delimiter))
+        tag_list.add(*string.split(delimiter))
       end
     end
   end
